# agents-studio-framework

./: .dockerignore  .env_example  .gitignore  .python-version  README.md  REUSE.toml  arguments.yaml  config.py  docker-compose.yml  lunarflow_reasoner.py  main.py  pyproject.toml  reasoner_agent.yaml
LICENSES/: GPL-3.0-only.txt
lunar-chat-interface/: .dockerignore  .env.docker_example  .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts
lunar-chat-interface/src/: configuration.ts  custom.d.ts
lunar_api/: Dockerfile  README.md  __init__.py  conftest.py  reasoner_flow.py
lunar_api/api/: main.py
lunar_api/app_context/: __init__.py  app_context.py  config.py  dependency_registration.py  tokens.py
lunar_api/auth/: __init__.py  dependencies.py  model.py  router.py  security.py
lunar_api/components/: router.py
lunar_api/flow_context/: flow_context_registration.py  tokens.py
lunar_api/flows/: __init__.py  flow_registry.py  input_inference.py  models.py  router.py  task_status.py
lunar_api/ioc/: __init__.py  container.py  service_token.py
lunar_api/report/: model.py  router.py
prompts/class_support/: episodes_to_slides.yaml  math_topic_to_timeline.yaml  slide_to_explicit_learning.yaml  slides_to_1h_project.yaml  slides_to_assessment.yaml  timeline_to_episodes.yaml  (+1 more)
report/: report.py  report_argument_quality_lunar.yaml  report_class_support_lunar.yaml  report_enriched_thesis_lunar.yaml  report_enrichement_lunar.yaml  report_walton_lunar.yaml  report_writing_lunar.yaml
(+366 files in other folders)
