# SPDX-FileCopyrightText: Copyright © 2025 Idiap Research Institute <contact@idiap.ch>
# SPDX-FileContributor: Imen Ben Mahmoud <imen.benmahmoud@idiap.ch>
#
# SPDX-License-Identifier: GPL-3.0-only

[project]
name = "argumentation-agent"
version = "1.0.0"
description = "Runtime platform for deploying and running AI agents workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.115.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "lunarflow",
    "openai-agents>=0.6.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "rdflib>=7.5.0",
    "uvicorn[standard]>=0.32.0"
]

[tool.uv.sources]
lunarflow = { git = "https://github.com/lunarbase-ai/lunarflow.git", rev="v0.4.12"}
